<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/nameText" android:text="@string/name"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/categoryNameTextField">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/descriptionText" android:text="@string/description"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textMultiLine" android:layout_weight="0.86" android:id="@+id/categoryDescriptionTextField" android:gravity="top"></EditText>
    <RelativeLayout android:layout_width="match_parent" android:id="@+id/relativeLayout1" android:layout_height="wrap_content" android:layout_weight="0.06">
        <Button android:layout_height="wrap_content" android:id="@+id/saveCategoryButton" android:text="@string/saveCategoryText" android:layout_width="wrap_content" android:layout_centerVertical="true" android:layout_centerHorizontal="true"></Button>
    </RelativeLayout>
</LinearLayout>
