<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1">
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/name" android:id="@+id/createUpdateNotebookNameLabel"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/createUpdateNotebookNameText">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:id="@+id/createUpdateDescriptionLabel" android:text="@string/description"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="textMultiLine" android:layout_weight="0.83" android:id="@+id/createUpdateNotebookDescriptionText" android:gravity="top"></EditText>
    <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="match_parent" android:layout_weight="0.18">
        <Button android:id="@+id/createUpdateNotebookSaveButton" android:text="@string/save_notebook" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_centerHorizontal="true"></Button>
    </RelativeLayout>
    
</LinearLayout>
