<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_weight="0.01" android:weightSum="1">
        <EditText android:layout_width="170dp" android:text="@string/default_name_text" android:layout_height="wrap_content" android:layout_weight="0.00" android:id="@+id/taskNameTextField">
            <requestFocus></requestFocus>
        </EditText>
        <Spinner android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/categorySpinner"></Spinner>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:weightSum="1" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/dueDateLabel" android:layout_weight="0.84" android:id="@+id/dueDateLabel"></TextView>
    </LinearLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.07" android:id="@+id/dueDateRelativeLayout">
        <DatePicker android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:id="@+id/dueDateWidget"></DatePicker>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/dueTimeRelativeLayout">
        <TimePicker android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:id="@+id/dueTimeWidget"></TimePicker>
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarmCheckBox" android:id="@+id/alarmCheckBox" android:layout_centerVertical="true" android:layout_alignParentRight="true"></CheckBox>
    </RelativeLayout>
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout3" android:layout_height="wrap_content">
    </LinearLayout>
    <RelativeLayout android:layout_width="match_parent" android:id="@+id/relativeLayout3" android:layout_height="wrap_content" android:layout_weight="0.14">
        <Spinner android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentRight="true" android:layout_width="200dp" android:id="@+id/prioritySpinner"></Spinner>
        <TextView android:layout_width="wrap_content" android:text="@string/priorityLabelText" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginLeft="14dp" android:id="@+id/priorityLabel"></TextView>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:id="@+id/relativeLayout1" android:layout_height="wrap_content" android:layout_weight="0.58" android:layout_gravity="center" android:gravity="center_vertical">
        <Button android:layout_height="wrap_content" android:layout_marginRight="114dp" android:layout_width="150dp" android:layout_centerInParent="true" android:id="@+id/saveButton" android:text="@string/saveButtonText"></Button>
    </RelativeLayout>
</LinearLayout>
